# lpfoundations_pde

./: pyproject.toml
.github/workflows/: cipipeline.yml
life_expectancy/: cleaning.py
life_expectancy/tests/: test_cleaning.py
