[project]
name = "life_expectancy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
description = "First assignment of the Foundations Learning Path"
authors = [{name="Paula", email="pauladomingeuzencinas@gmail.com"}]

[tool.poetry.dependencies]
dev = ["pandas", "pytest", "pylint", "pytest-cov", "toml"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pylint."messages control"]
disable = [
   "missing-module-docstring",
   "missing-function-docstring",
   "unused-argument"
]

[tool.setuptools]
packages = ["life_expectancy"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80