[tool.poetry]
name = ["life_expectancy"]
version = ["0.1.0"]
readme = "README.md"
description = ["First assignment of the Foundations Learning Path"]
authors = ["Paula <pauladomingeuzencinas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.9.6"
pytest-cov = "^2.12.1"
toml = "^0.10.2"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pylint."messages control"]
disable = [
   "missing-module-docstring",
   "missing-function-docstring",
   "unused-argument"
]

[tool.setuptools]
packages = ["life_expectancy"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80